@@ -514,7 +514,7 @@ foreach my $cal (('calendar','private')) {
 <div>
 For CardDAV support (addressbook sharing) the WebDAV CGI script must handle the root context of your Web server. There are several ways to do that if your Web server is not a only used for WebDAV CGI:
 <ul>
-<li> use a new host name (alias) for your Web server and configure named virutal hosting.
+<li> use a new host name (alias) for your Web server and configure named virutal hosting. 
 <pre>
 NameVirtualHost *:443
 &lt;VirtualHost myvirtualhost:443>
