@@ -544,10 +544,14 @@ function selcheck() {
 		i++;
 	}
 }
+function autorefreshcheck() {
+	if (getCookie("autorefresh") != "") setAutoRefresh(getCookie("autorefresh"));
+}
 function check() {
 	selcheck();
 	clpcheck();
 	bookmarkcheck();
+	// autorefreshcheck();
 	hideMsg();
 }
 function fadeOut(id) {
@@ -746,4 +750,13 @@ function renderClock(eid,fmt) {
 	s = s.replace(/\%M/, addzero(d.getMinutes()));
 	s = s.replace(/\%S/, addzero(d.getSeconds()));
 	e.innerHTML = s;
+}
+
+var autorefreshinterval = null;
+function setAutoRefresh(seconds) {
+	if (autorefreshinterval!=null) window.clearInterval(autorefreshinterval);
+	if (seconds>0 && !window.location.search.match(/edit/)) {
+		autorefreshinterval = window.setInterval("window.location.reload()",1000 * seconds);
+	}		
+	setCookie('autorefresh',seconds,1);
 }
